# synod

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-synod  bazel-testlogs  go.mod  go.sum  plan.md  update_sentinel.py
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: build-test.yml  publish-bcr.yml  publish.yml  release.yml
.jules/: sentinel.md
ai/: bazel.spec.md  build.spec.md  synod.spec.md
cmd/agent/: BUILD.bazel  main.go
doc/site/: index.html
internal/backoff/: BUILD.bazel  backoff.go  backoff_test.go
internal/constants/: BUILD.bazel  constants.go
internal/identity/: BUILD.bazel  identity.go  identity_test.go
internal/names/: BUILD.bazel  names.go  names.txt  names_test.go
internal/paxos/: BUILD.bazel  acceptor.go  acceptor_test.go  cell.go  cell_test.go  proposer.go  proposer_test.go
internal/server/: BUILD.bazel  grpc_client.go  grpc_server.go  grpc_server_test.go  grpc_status.go  http_server.go  http_server_test.go  listen.go  listen_test.go
internal/server/templates/: command.html  error.html  footer.html  grpc.html  header.html  index.html  messages.html  peers.html  store.html  system.html  userapi.html
internal/state/: BUILD.bazel  state.go  state_test.go
internal/userapi/: BUILD.bazel  lock.go  userapi.go  userapi_test.go
proto/paxos/v1/: BUILD  paxos.pb.go  paxos.proto
test/integration/: BUILD.bazel  http_test.go  integration_test.go  lock_test.go  ping_test.go
tools/: BUILD.bazel  try_it.bash
tools/ai/ping-pkg-go-dev/: BUILD.bazel  main.go
