module(
    name = "synod",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_grpc_grpc",
)

# Configure protoc as a prebuilt bazel toolchain.
# Protobuf already provides a default toolchain which uses prebuilt binaries.
# To ensure it uses prebuilt, we can register the toolchain explicitly if needed,
# but usually it's automatic.
