module(
    name = "synod",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "grpc", version = "1.69.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_google_uuid",
    "com_github_mattn_go_sqlite3",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# Configure protoc as a prebuilt bazel toolchain.
# Protobuf already provides a default toolchain which uses prebuilt binaries.
# To ensure it uses prebuilt, we can register the toolchain explicitly if needed,
# but usually it's automatic.
bazel_dep(name = "rules_android", version = "0.7.1")
