load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "agent_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/synod/cmd/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/paxos",
        "//internal/server",
        "//internal/state",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "agent",
    embed = [":agent_lib"],
    visibility = ["//visibility:public"],
)
