load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "agent_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/synod/cmd/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/backoff",
        "//internal/constants",
        "//internal/names",
        "//internal/paxos",
        "//internal/server",
        "//internal/state",
        "//internal/userapi",
        "//proto/paxos/v1:paxosv1_go_proto",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "agent",
    embed = [":agent_lib"],
    visibility = ["//visibility:public"],
)
