# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "names",
    srcs = [
        "names.go",
        "names_data.go",
    ],
    importpath = "github.com/filmil/synod/internal/names",
    visibility = ["//visibility:public"],
)

go_test(
    name = "names_test",
    srcs = ["names_test.go"],
    embed = [":names"],
)

genrule(
    name = "names_data",
    srcs = ["//third_party/names:names.txt"],
    outs = ["names_data.go"],
    cmd = "$(location //internal/names/gen) $< $@",
    tools = ["//internal/names/gen"],
)
