load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "grpc_client.go",
        "grpc_server.go",
        "http_server.go",
        "listen.go",
    ],
    data = ["//third_party/bootstrap"],
    importpath = "github.com/filmil/synod/internal/server",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/backoff",
        "//internal/constants",
        "//internal/paxos",
        "//internal/state",
        "//internal/userapi",
        "//proto/paxos/v1:paxosv1_go_proto",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@rules_go//go/runfiles",
    ],
)
