# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "grpc_client.go",
        "grpc_server.go",
        "grpc_status.go",
        "http_server.go",
        "listen.go",
    ],
    data = ["//third_party/bootstrap"],
    embedsrcs = glob(["templates/*.html"]),
    importpath = "github.com/filmil/synod/internal/server",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/backoff",
        "//internal/constants",
        "//internal/identity",
        "//internal/paxos",
        "//internal/state",
        "//internal/userapi",
        "//proto/paxos/v1:paxosv1_go_proto",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//channelz/grpc_channelz_v1",
        "@org_golang_google_grpc//channelz/service",
        "@org_golang_google_grpc//credentials/insecure",
        "@rules_go//go/runfiles",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "http_server_test.go",
        "listen_test.go",
    ],
    embed = [":server"],
    deps = [
        "//internal/paxos",
        "//internal/state",
    ],
)
