load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "state",
    srcs = ["state.go"],
    importpath = "github.com/filmil/synod/internal/state",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/paxos/v1:paxos",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)
