load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "state",
    srcs = ["state.go"],
    importpath = "github.com/filmil/synod/internal/state",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/paxos/v1:paxosv1_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)

load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "state_test",
    srcs = ["state_test.go"],
    embed = [":state"],
    deps = [
        "//proto/paxos/v1:paxosv1_go_proto",
    ],
)
