load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "userapi",
    srcs = ["userapi.go"],
    importpath = "github.com/filmil/synod/internal/userapi",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/backoff",
        "//internal/paxos",
        "//proto/paxos/v1:paxosv1_go_proto",
        "@com_github_golang_glog//:glog",
    ],
)
