load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = ["integration_test.go"],
    deps = [
        "//internal/paxos",
        "//internal/server",
        "//internal/state",
        "//proto/paxos/v1:paxos",
        "@com_github_golang_glog//:glog",
    ],
)
