load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    size = "medium",
    srcs = [
        "integration_test.go",
        "lock_test.go",
        "ping_test.go",
    ],
    deps = [
        "//internal/backoff",
        "//internal/constants",
        "//internal/paxos",
        "//internal/server",
        "//internal/state",
        "//internal/userapi",
        "//proto/paxos/v1:paxosv1_go_proto",
        "@com_github_golang_glog//:glog",
    ],
)
